TheKabal (18 June 2013)
--------------------------------------
Added "bigbang", which is the proposed template driven replacement for create universe

TheKabal (3 June 2013)
--------------------------------------
Switch timestamps to use h:i:s instead of h-i-s. Helps with portability to postgresql, and doesn't cause errors on mysql.

TheKabal (2 June 2013)
--------------------------------------
Add a new BntRand class, which includes improved (but still could be improved further!) functions for generating random numbers. BntRand::betterRand is the best choice.
Fix the footer display that shows the count of players online to work on both pgsql & mysql - portable SQL!

TheMightyDude (01 June 2013)
--------------------------------------
Fixed PHP Notice: Undefined variable: ships in includes/ibank_transfer.php on line 54
Fixed PHP Warning: Invalid argument supplied for foreach() in includes/ibank_transfer.php on line 54
Fixed PHP Notice: Undefined variable: creator in teams.php on line 268
Fixed Score Issue from capping to 2,147,483,648 score in the ships table needs to be BIGINT 64bits.

TheKabal (30 May 2013)
--------------------------------------
Fixes to move Sol from 0 to 1, including languages and rsmove.

TheKabal (27 May 2013)
--------------------------------------
Fixes to scheduler to make them run correctly (even in PGSQL). Not the ideal solution, but works for now.

TheKabal (25 May 2013)
--------------------------------------
Error management - Throw (and catch) exception in BntSmarty if the template _cache or _compile directories are not writable (or the system won't work for some other reason).
Create universe - Initial (step 0) gives feedback if you enter the wrong password
Create universe - Steps after 0 includes the submit button in the table
Create universe - Warning message should be above (not below) the confirm in step 2
Create universe - All output is now language file driven (translatable)