@@ -1,5 +1,6 @@
 TheKabal (18 June 2013)
 --------------------------------------
+Fix weird language not being set bug where on clean install english would be English, triggering languages to be missing
 Added "bigbang", which is the proposed template driven replacement for create universe
 
 TheKabal (3 June 2013)
